1. Initial setup - test code upload to gitlab