@@ -1,15 +1,0 @@
-image: ubuntu:latest
-
-stages:
-  - build
-
-build:
-  stage: build
-  script:
-    - apt-get update -y
-    - apt-get install -y golang
-    - go version
-    - git clone https://gitlab.com/abhishek_codes/passman.git
-    - cd passman
-  tags:
-    - docker
