@@ -1,3 +1,10 @@
 module gitlab.com/abhishek_codes/passman
 
 go 1.22.4
+
+require (
+	github.com/inconshreveable/mousetrap v1.1.0 // indirect
+	github.com/spf13/cobra v1.8.1 // indirect
+	github.com/spf13/pflag v1.0.5 // indirect
+	golang.org/x/crypto v0.24.0 // indirect
+)
